Improve home page performance

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio - Lina Oliveira</title>
+    <meta name="description" content="Dive into my portfolio to discover my approach to seamless and dynamic web interfaces using the latest technologies and trends.">
+    <link rel="preload" fetchpriority="high" as="image" href="/lina-illustration.webp" type="image/webp">
   </head>
   <body>
     <div id="root"></div>
